--- a/sportsService/src/main/resources/application.properties
+++ b/sportsService/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 
+spring.datasource.url= jdbc:mysql://localhost:3306/sportsadda
+spring.datasource.username=root
+spring.datasource.password= Gupta@2804
+spring.datasource.driver = com.mysql.cj.jdbc.Drive
