--- a/userService/src/main/resources/application.properties
+++ b/userService/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-
+spring.datasource.url= jdbc:mysql://localhost:3306/sportsadda
+spring.datasource.username=root
+spring.datasource.password= Gupta@2804
+spring.datasource.driver = com.mysql.cj.jdbc.Drive
+spring.security.user.name= abcd
+spring.security.user.password=abcd
+#server.port=9090
+spring.jpa.hibernate.ddl-auto=update
+logging.level.org.hibernate.SQL = debug
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
